add image jobcatcher

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>Chris Dermody's GitHub Projects</title>
+		<title>Eduardo Zatoni Curupana</title>
 
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 
@@ -66,8 +66,8 @@
 				<!-- side content -->
 				<div class="col-sm-3 about-me about-side text-center hidden-xs">
 						<img src="img/profiler-round2.png" width=200 class="profile-pic img-responsive center-block">
-						<h1>Chris Dermody</h1>
-						<h2>Product Manager</h2>
+						<h1>Eduardo Zatoni Curupana</h1>
+						<h2>iOS Developer</h2>
 						<h3>Web/Mobile Developer</h3>
 
 						<div class="text-center" style="margin:20px">
@@ -101,7 +101,9 @@
 					<div class="row work-item-row">
 							<div class="col-sm-8 col-sm-offset-2 project">
 
-								<img src="img/jobbie1.png" class="img-responsive">
+								<img src="img/projects/jobcatcher/image1.png" class="img-responsive">
+                                <img src="img/projects/jobcatcher/image2.png" class="img-responsive">
+                                <img src="img/projects/jobcatcher/image3.png" class="img-responsive">
 
 								<h2 class="text-center"><a href="http://jobb.ie" target="blank">Jobb.ie</a></h2>
 								<p>A simple web app built to quickly find jobs in Ireland. Users enter the search term and desired county, and are offered job listings from 3 of the most popular job sites in Ireland</p>
