--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 
 		<nav class="navbar navbar-default hidden-sm hidden-md hidden-lg navbar-fixed-top">
 			<div class="container-fluid">
-<!-- 				<a class="navbar-brand">
-					<img src="img/profiler-round2.png" width=70 class="profile-pic">
-				</a>
+<!--                 <a class="navbar-brand">
+                    <img src="img/profiler-round2.png" width=70 class="profile-pic">
+                </a>
  -->
 				<!-- <p class="navbar-text">Chris Dermody | Developer</p> -->
 				
@@ -65,14 +65,15 @@
 
 				<!-- side content -->
 				<div class="col-sm-3 about-me about-side text-center hidden-xs">
-						<img src="img/profiler-round2.png" width=200 class="profile-pic img-responsive center-block">
+						<img src="img/profiler-round2.JPG" width=200 class="profile-pic img-responsive center-block">
 						<h1>Eduardo Zatoni Curupana</h1>
 						<h2>iOS Developer</h2>
-						<h3>Web/Mobile Developer</h3>
+<!--                        <h3>Web/Mobile Developer</h3>-->
 
 						<div class="text-center" style="margin:20px">
-							<a href="#" class="cta-icon"><i class="devicon-twitter-plain colored"></i></a>
-							<a href="#" class="cta-icon"><i class="devicon-github-plain colored"></i></a>
+<!--                            <a href="#" class="cta-icon"><i class="devicon-twitter-plain colored"></i></a>-->
+<!--                            <a href="#" class="cta-icon"><i class="devicon-github-plain colored"></i></a>-->
+<!--                            <a href="https://www.linkedin.com/in/eduardozatoni/?locale=en_US" class="cta-icon"><i class="img/linkedin.png"></i></a>-->
 						</div>
 				</div>
 
@@ -82,11 +83,11 @@
 						<h2>Product Manager</h2>
 						<h3>Web/Mobile Developer</h3>
 
-						<div class="text-center" style="margin:20px">
-							<a href="http://chrisdermody.com/" class="" target="_blank">
-								chrisdermody.com
-							</a>
-						</div>
+<!--                        <div class="text-center" style="margin:20px">-->
+<!--                            <a href="http://chrisdermody.com/" class="" target="_blank">-->
+<!--                                chrisdermody.com-->
+<!--                            </a>-->
+<!--                        </div>-->
 				</div>
 
 				<div class="bottom-cta hidden-sm hidden-md hidden-lg text-center">
