--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 				<!-- side content -->
 				<div class="col-sm-3 about-me about-side text-center hidden-xs">
-						<img src="img/profiler-round2.JPG" width=200 class="profile-pic img-responsive center-block">
+						<img src="img/profiler-round2.jpg" width=200 class="profile-pic img-responsive center-block">
 						<h1>Eduardo Zatoni Curupana</h1>
 						<h2>iOS Developer</h2>
 <!--                        <h3>Web/Mobile Developer</h3>-->
