--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 								</div>
 								<div class="row text-center" style="margin:20px;">
 <!--                                        <a class="btn btn-launch" href="http://jobb.ie" target="blank">Launch</a>-->
-                                    <a href="../html-link.htm"><img src="img/app_store_white.png" width="200" height="34" title="App Store" alt="appstore"></a>
+                                    <a href="../html-link.htm"><img src="img/app_store_black.png" width="200" height="50" title="App Store" alt="appstore"></a>
 								</div>
 							</div>
 					</div>
