--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <div class="row work-item-row">
                         <div class="col-sm-8 col-sm-offset-2 project">
                             
-                            <img src="img/mydeliverypal.png" class="img-responsive">
+                            <img src="img/projects/rhitme/image.png" class="img-responsive">
                                 
                                 <h2 class="text-center"><a href="https://apps.apple.com/app/rhitme/id1465720365" target="blank">Rhitme</a></h2>
                                 <p>An Android application for delivery drivers and couriers, making them faster and more efficient at their job</p>
@@ -120,7 +120,7 @@
                                                             </div>
                                 </div>
                                 <div class="row text-center" style="margin:20px;">
-                                    <a href="https://apps.apple.com/app/rhitme/id1465720365"><img src="img/app_store_black.png" width="200" height="60" title="App Store" alt="appstore"></a>
+                                    <a href="https://apps.apple.com/app/rhitme/id1465720365"><img src="img/app_store_black.png" width="200" height="65" title="App Store" alt="appstore"></a>
                                 </div>
                                 </div>
                     </div>
@@ -145,7 +145,7 @@
 									</div>
 								</div>
 								<div class="row text-center" style="margin:20px;">
-                                    <a href="https://apps.apple.com/app/jobcatcher/id1451967259"><img src="img/app_store_black.png" width="200" height="60" title="App Store" alt="appstore"></a>
+                                    <a href="https://apps.apple.com/app/jobcatcher/id1451967259"><img src="img/app_store_black.png" width="200" height="65" title="App Store" alt="appstore"></a>
 								</div>
 							</div>
 					</div>
