fix images format

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
 
 				<div class="text-center about-me hidden-sm hidden-md hidden-lg">
 						<img src="img/profiler-round2.png" width=200 class="profile-pic img-responsive center-block">
-						<h1>Chris Dermody</h1>
-						<h2>Product Manager</h2>
-						<h3>Web/Mobile Developer</h3>
+						<h1>Eduardo Zatoni Curupana</h1>
+						<h2>iOS Developer</h2>
+<!--                        <h3>Web/Mobile Developer</h3>-->
 
 <!--                        <div class="text-center" style="margin:20px">-->
 <!--                            <a href="http://chrisdermody.com/" class="" target="_blank">-->
@@ -107,17 +107,16 @@
                             <img src="img/projects/rhitme/image.png" class="img-responsive">
                                 
                                 <h2 class="text-center"><a href="https://apps.apple.com/app/rhitme/id1465720365" target="blank">Rhitme</a></h2>
-                                <p>An Android application for delivery drivers and couriers, making them faster and more efficient at their job</p>
-                                <h4>Technology</h4>
-                                <p>Delivery Pal is build with Ionic, Angular, and Firebase for real-time location tracking. Integrating with the Google Maps API for address lookup and navigation. A Node.js server hosted on Heroku acts as a middel-man, handling backend logic and database updates within Firebase</p>
+                                <p>An App that allows people who are new to music to improve their rhythmic skills through a gamified interactive experience. </p>
+<!--                                <h4>Technology</h4>-->
+<!--                                <p>Delivery Pal is build with Ionic, Angular, and Firebase for real-time location tracking. Integrating with the Google Maps API for address lookup and navigation. A Node.js server hosted on Heroku acts as a middel-man, handling backend logic and database updates within Firebase</p>-->
                                 <div class="row text-center">
                                     <div class="col-xs-12">
-                                        <img src="img/techlogos/ionic.png" class="techlogo" width="100">
-                                            <img src="img/techlogos/angular.png" class="techlogo" width="100">
-                                                <img src="img/techlogos/node.png" class="techlogo" width="100">
-                                                    <img src="img/techlogos/heroku.png" class="techlogo" width="100">
-                                                        <img src="img/techlogos/firebase.png" class="techlogo" width="100">
-                                                            </div>
+                                        <img src="img/techlogos/swift.png" class="techlogo" width="100">
+                                        <img src="img/techlogos/spritekit.png" class="techlogo" width="100">
+                                        <img src="img/techlogos/avfoundation.png" class="techlogo" width="100">
+                                        <img src="img/techlogos/coredata.png" class="techlogo" width="100">
+                                    </div>
                                 </div>
                                 <div class="row text-center" style="margin:20px;">
                                     <a href="https://apps.apple.com/app/rhitme/id1465720365"><img src="img/app_store_black.png" width="200" height="65" title="App Store" alt="appstore"></a>
