--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
 								<img src="img/projects/jobcatcher/image.png" class="img-responsive">
 
 								<h2 class="text-center"><a href="https://apps.apple.com/app/jobcatcher/id1451967259" target="blank">JobCatcher</a></h2>
-								<p>A simple web app built to quickly find jobs in Ireland. Users enter the search term and desired county, and are offered job listings from 3 of the most popular job sites in Ireland</p>
-								<h4>Technology</h4>
-								<p>Jobbie uses Bootstrap3 for a mobile-first layout, with jQuery for easy page manipulation. On the backend an Express/Node.js app lives on a Heroku dyno that acts as a middleware to scrape job sites and return the information to the user.</p>
+								<p>App that helps people to find jobs by placing augmented reality objects with advertising of job openings in popular places or on exact buildings where these openings are located.</p>
+<!--                                <h4>Technology</h4>-->
+<!--                                <p>Jobbie uses Bootstrap3 for a mobile-first layout, with jQuery for easy page manipulation. On the backend an Express/Node.js app lives on a Heroku dyno that acts as a middleware to scrape job sites and return the information to the user.</p>-->
 
 								<div class="row text-center">
 									<div class="col-xs-12">
-										<img src="img/techlogos/jquery.png" class="techlogo" width="100">
-										<img src="img/techlogos/bootstrap.png" class="techlogo" width="100">
+										<img src="img/techlogos/swift.png" class="techlogo" width="100">
+										<img src="img/techlogos/arkit.png" class="techlogo" width="100">
 										<img src="img/techlogos/node.png" class="techlogo" width="100">
 										<img src="img/techlogos/heroku.png" class="techlogo" width="100">
 									</div>
