fix images format

--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
 <!--                                <p>Delivery Pal is build with Ionic, Angular, and Firebase for real-time location tracking. Integrating with the Google Maps API for address lookup and navigation. A Node.js server hosted on Heroku acts as a middel-man, handling backend logic and database updates within Firebase</p>-->
                                 <div class="row text-center">
                                     <div class="col-xs-12">
-                                        <img src="img/techlogos/swift.png" class="techlogo" width="100">
-                                        <img src="img/techlogos/spritekit.png" class="techlogo" width="100">
-                                        <img src="img/techlogos/avfoundation.png" class="techlogo" width="100">
-                                        <img src="img/techlogos/coredata.png" class="techlogo" width="100">
+                                        <img src="img/techlogos/swift.png" class="techlogo">
+                                        <img src="img/techlogos/spritekit.png" class="techlogo">
+                                        <img src="img/techlogos/avfoundation.png" class="techlogo">
+                                        <img src="img/techlogos/coredata.png" class="techlogo">
                                     </div>
                                 </div>
                                 <div class="row text-center" style="margin:20px;">
