--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>Eduardo Zatoni Curupana</title>
+		<title>Eduardo Zatoni's Projects</title>
 
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 
@@ -92,6 +92,7 @@
 
 				<div class="bottom-cta hidden-sm hidden-md hidden-lg text-center">
 					<div class="btn btn-success">Get in touch</div>
+                    <a href="mailto:eduzatoni@outloook.com" class="email"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>eduzatoni@outloook.com</a>
 				</div>
 
 
@@ -139,8 +140,6 @@
 									<div class="col-xs-12">
 										<img src="img/techlogos/swift.png" class="techlogo" width="100">
 										<img src="img/techlogos/arkit.png" class="techlogo" width="100">
-										<img src="img/techlogos/node.png" class="techlogo" width="100">
-										<img src="img/techlogos/heroku.png" class="techlogo" width="100">
 									</div>
 								</div>
 								<div class="row text-center" style="margin:20px;">
@@ -150,94 +149,92 @@
 					</div>
 
 
-
-					<div class="row work-item-row">
-						<div class="col-sm-8 col-sm-offset-2 project">
-								<img src="img/vistoryscreen1.png" class="img-responsive">
-								<h2 class="text-center"><a href="http://vistoryapp.com" target="blank">Vistory</a></h2>
-								<h4>Mobile Car App</h4>
-								<p>An Android application for vehicle owners to quickly and easily log maintenance and parts costs for their cars.</p>
-								<h4>Technology</h4>
-								<p>Vistory is built on the Ionic platform that uses the Angular.js framework to build cross-platform mobile applications. On the backend Vistory uses an Express/Node.js app on Heroku to handle user accounts and authentication, while a remote noSQL database sits on Cloudant for backing up user data</p>
-								<div class="row text-center">
-										<div class="col-xs-12">
-												<img src="img/techlogos/ionic.png" class="techlogo" width="100">
-												<img src="img/techlogos/angular.png" class="techlogo" width="100">
-												<img src="img/techlogos/node.png" class="techlogo" width="100">
-												<img src="img/techlogos/heroku.png" class="techlogo" width="100">
-												<img src="img/techlogos/pouch-grey.png" class="techlogo" width="100">
-												<img src="img/techlogos/cloudant.png" class="techlogo" width="100">
-										</div>
-								</div>
-								<div class="row text-center" style="margin:20px;">
-										<a class="btn btn-launch" href="http://vistoryapp.com" target="blank">Open app site</a>
-								</div>
-						</div>
-				</div>
-
-
-				<div class="row work-item-row">
-						<div class="col-sm-8 col-sm-offset-2 project">
-								<img src="img/techlogos/slack.png" class="img-responsive" width="300" style="margin: auto; margin-top:50px">
-								<h2 class="text-center"><a href="https://github.com/Chippd/slackDomainChecker" target="blank">Slack Chat Bot</a></h2>
-								<p>A Slack chat bot built to quickly check domain name availability across the most popular TLD's. </p>
-								<h4>Technology</h4>
-								<p>The Slack bot interacts with a Node.js app living on Heroku, which requests information from a free domain-checking api, parses the response, and delivers a colour-coded response back to the client.</p>
-								<div class="row text-center">
-										<div class="col-xs-12">
-												<img src="img/techlogos/node.png" class="techlogo" width="100">
-												<img src="img/techlogos/heroku.png" class="techlogo" width="100">
-										</div>
-								</div>
-								<div class="row text-center" style="margin:20px;">
-										<a class="btn btn-launch" href="https://github.com/Chippd/slackDomainChecker" target="blank">View on Github</a>
-								</div>
-						</div>
-				</div>
+<!---->
+<!--                    <div class="row work-item-row">-->
+<!--                        <div class="col-sm-8 col-sm-offset-2 project">-->
+<!--                                <img src="img/vistoryscreen1.png" class="img-responsive">-->
+<!--                                <h2 class="text-center"><a href="http://vistoryapp.com" target="blank">Vistory</a></h2>-->
+<!--                                <h4>Mobile Car App</h4>-->
+<!--                                <p>An Android application for vehicle owners to quickly and easily log maintenance and parts costs for their cars.</p>-->
+<!--                                <h4>Technology</h4>-->
+<!--                                <p>Vistory is built on the Ionic platform that uses the Angular.js framework to build cross-platform mobile applications. On the backend Vistory uses an Express/Node.js app on Heroku to handle user accounts and authentication, while a remote noSQL database sits on Cloudant for backing up user data</p>-->
+<!--                                <div class="row text-center">-->
+<!--                                        <div class="col-xs-12">-->
+<!--                                                <img src="img/techlogos/ionic.png" class="techlogo" width="100">-->
+<!--                                                <img src="img/techlogos/angular.png" class="techlogo" width="100">-->
+<!--                                                <img src="img/techlogos/node.png" class="techlogo" width="100">-->
+<!--                                                <img src="img/techlogos/heroku.png" class="techlogo" width="100">-->
+<!--                                                <img src="img/techlogos/pouch-grey.png" class="techlogo" width="100">-->
+<!--                                                <img src="img/techlogos/cloudant.png" class="techlogo" width="100">-->
+<!--                                        </div>-->
+<!--                                </div>-->
+<!--                                <div class="row text-center" style="margin:20px;">-->
+<!--                                        <a class="btn btn-launch" href="http://vistoryapp.com" target="blank">Open app site</a>-->
+<!--                                </div>-->
+<!--                        </div>-->
+<!--                </div>-->
 
 
-
-				<div class="row work-item-row">
-						<div class="col-sm-8 col-sm-offset-2 project">
-								<img src="img/sail-experience.png" class="img-responsive">
-								<h2 class="text-center">Sail Experience Greece</h2>
-								<h4>Wordpress</h4>
-								<p>My client required a visually impressive lead capture website where customers could see the yachts, villas and packages on offer and submit requests for more information</p>
-								<h4>Technology</h4>
-								<p>Sail Experience was built using the WordPress CMS as the client requested the ability to update the site copy themselves and add/remove products as needed. The theme is a premium theme, customised to suit the needs of the business</p>
-								<div class="row text-center">
-										<div class="col-xs-12">
-												<img src="img/techlogos/wordpress.png" class="techlogo" width="100">
-										</div>
-								</div>
-								<div class="row text-center" style="margin:20px;">
-										<a class="btn btn-launch" href="http://sail-experience.com" target="blank">Open site</a>
-								</div>
-						</div>
-				</div>
+<!--                <div class="row work-item-row">-->
+<!--                        <div class="col-sm-8 col-sm-offset-2 project">-->
+<!--                                <img src="img/techlogos/slack.png" class="img-responsive" width="300" style="margin: auto; margin-top:50px">-->
+<!--                                <h2 class="text-center"><a href="https://github.com/Chippd/slackDomainChecker" target="blank">Slack Chat Bot</a></h2>-->
+<!--                                <p>A Slack chat bot built to quickly check domain name availability across the most popular TLD's. </p>-->
+<!--                                <h4>Technology</h4>-->
+<!--                                <p>The Slack bot interacts with a Node.js app living on Heroku, which requests information from a free domain-checking api, parses the response, and delivers a colour-coded response back to the client.</p>-->
+<!--                                <div class="row text-center">-->
+<!--                                        <div class="col-xs-12">-->
+<!--                                                <img src="img/techlogos/node.png" class="techlogo" width="100">-->
+<!--                                                <img src="img/techlogos/heroku.png" class="techlogo" width="100">-->
+<!--                                        </div>-->
+<!--                                </div>-->
+<!--                                <div class="row text-center" style="margin:20px;">-->
+<!--                                        <a class="btn btn-launch" href="https://github.com/Chippd/slackDomainChecker" target="blank">View on Github</a>-->
+<!--                                </div>-->
+<!--                        </div>-->
+<!--                </div>-->
 
 
 
+<!--                <div class="row work-item-row">-->
+<!--                        <div class="col-sm-8 col-sm-offset-2 project">-->
+<!--                                <img src="img/sail-experience.png" class="img-responsive">-->
+<!--                                <h2 class="text-center">Sail Experience Greece</h2>-->
+<!--                                <h4>Wordpress</h4>-->
+<!--                                <p>My client required a visually impressive lead capture website where customers could see the yachts, villas and packages on offer and submit requests for more information</p>-->
+<!--                                <h4>Technology</h4>-->
+<!--                                <p>Sail Experience was built using the WordPress CMS as the client requested the ability to update the site copy themselves and add/remove products as needed. The theme is a premium theme, customised to suit the needs of the business</p>-->
+<!--                                <div class="row text-center">-->
+<!--                                        <div class="col-xs-12">-->
+<!--                                                <img src="img/techlogos/wordpress.png" class="techlogo" width="100">-->
+<!--                                        </div>-->
+<!--                                </div>-->
+<!--                                <div class="row text-center" style="margin:20px;">-->
+<!--                                        <a class="btn btn-launch" href="http://sail-experience.com" target="blank">Open site</a>-->
+<!--                                </div>-->
+<!--                        </div>-->
+<!--                </div>-->
 
-					<div class="row row-tools row-grey">
-							<div class="col-sm-12 text-center">
 
-								<h3>Tools I Use</h3>
 
-								<img src="img/tool-logos/sketch.png" class="techlogo" width="150">
-								<img src="img/tool-logos/git.png" class="techlogo" width="150">
-								<img src="img/tool-logos/sublime.png" class="techlogo" width="150">
 
-							</div>
-					</div>
+<!--                    <div class="row row-tools row-grey">-->
+<!--                            <div class="col-sm-12 text-center">-->
+<!---->
+<!--                                <h3>Tools I Use</h3>-->
+<!---->
+<!--                                <img src="img/tool-logos/sketch.png" class="techlogo" width="150">-->
+<!--                                <img src="img/tool-logos/git.png" class="techlogo" width="150">-->
+<!--                                <img src="img/tool-logos/sublime.png" class="techlogo" width="150">-->
+<!---->
+<!--                            </div>-->
+<!--                    </div>-->
 
 					<div class="row row-footer text-center">
 						<div class="col">
 							<div style="margin:50px;">
 								<h3 style="margin:50px 0 15px">I'm available for work, get in touch</h3>
-								<a href="http://chrisdermody.com/" class="" target="_blank">
-									chrisdermody.com
-								</a>
+								<a href="mailto:eduzatoni@outloook.com" class="email"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>eduzatoni@outloook.com</a>
 							</div>
 						</div>
 					</div>
