fix images format

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 						<img src="img/profiler-round2.png" width=200 class="profile-pic img-responsive center-block">
 						<h1>Eduardo Zatoni Curupana</h1>
 						<h2>iOS Developer</h2>
+                        <a href="mailto:eduzatoni@outloook.com" class="email"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>eduzatoni@outloook.com</a>
 <!--                        <h3>Web/Mobile Developer</h3>-->
 
 						<div class="text-center" style="margin:20px">
