--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
 									<div class="col-xs-12">
 										<img src="img/techlogos/swift.png" class="techlogo" width="100">
 										<img src="img/techlogos/arkit.png" class="techlogo" width="100">
+                                            <img src="img/techlogos/cocoapods.png" class="techlogo" width="100">
 									</div>
 								</div>
 								<div class="row text-center" style="margin:20px;">
