--- a/index.html
+++ b/index.html
@@ -151,30 +151,24 @@
 					</div>
 
 
-<!---->
-<!--                    <div class="row work-item-row">-->
-<!--                        <div class="col-sm-8 col-sm-offset-2 project">-->
-<!--                                <img src="img/vistoryscreen1.png" class="img-responsive">-->
-<!--                                <h2 class="text-center"><a href="http://vistoryapp.com" target="blank">Vistory</a></h2>-->
-<!--                                <h4>Mobile Car App</h4>-->
-<!--                                <p>An Android application for vehicle owners to quickly and easily log maintenance and parts costs for their cars.</p>-->
+                    <div class="row work-item-row">
+                        <div class="col-sm-8 col-sm-offset-2 project">
+                                <img src="img/projects/vinilicious/image.png" class="img-responsive">
+                                <h2 class="text-center"><a href="https://github.com/eduzatoni/vinilicious" target="blank">Vistory</a></h2>
+                                <h4>Vinilicious</h4>
+                                <p>A game to know more about Vinicius, friend from Apple Developer Academy, guessing ingredients from his recipes.</p>
 <!--                                <h4>Technology</h4>-->
 <!--                                <p>Vistory is built on the Ionic platform that uses the Angular.js framework to build cross-platform mobile applications. On the backend Vistory uses an Express/Node.js app on Heroku to handle user accounts and authentication, while a remote noSQL database sits on Cloudant for backing up user data</p>-->
-<!--                                <div class="row text-center">-->
-<!--                                        <div class="col-xs-12">-->
-<!--                                                <img src="img/techlogos/ionic.png" class="techlogo" width="100">-->
-<!--                                                <img src="img/techlogos/angular.png" class="techlogo" width="100">-->
-<!--                                                <img src="img/techlogos/node.png" class="techlogo" width="100">-->
-<!--                                                <img src="img/techlogos/heroku.png" class="techlogo" width="100">-->
-<!--                                                <img src="img/techlogos/pouch-grey.png" class="techlogo" width="100">-->
-<!--                                                <img src="img/techlogos/cloudant.png" class="techlogo" width="100">-->
-<!--                                        </div>-->
-<!--                                </div>-->
-<!--                                <div class="row text-center" style="margin:20px;">-->
-<!--                                        <a class="btn btn-launch" href="http://vistoryapp.com" target="blank">Open app site</a>-->
-<!--                                </div>-->
-<!--                        </div>-->
-<!--                </div>-->
+                                <div class="row text-center">
+                                        <div class="col-xs-12">
+                                                <img src="img/techlogos/swift.png" class="techlogo" width="100">
+                                        </div>
+                                </div>
+                                <div class="row text-center" style="margin:20px;">
+                                        <a class="btn btn-launch" href="https://github.com/eduzatoni/vinilicious" target="blank">On GitHub</a>
+                                </div>
+                        </div>
+                </div>
 
 
 <!--                <div class="row work-item-row">-->
