--- a/index.html
+++ b/index.html
@@ -154,8 +154,7 @@
                     <div class="row work-item-row">
                         <div class="col-sm-8 col-sm-offset-2 project">
                                 <img src="img/projects/vinilicious/image.png" class="img-responsive">
-                                <h2 class="text-center"><a href="https://github.com/eduzatoni/vinilicious" target="blank">Vistory</a></h2>
-                                <h4>Vinilicious</h4>
+                                <h2 class="text-center"><a href="https://github.com/eduzatoni/vinilicious" target="blank">Vinilicious</a></h2>
                                 <p>A game to know more about Vinicius, friend from Apple Developer Academy, guessing ingredients from his recipes.</p>
 <!--                                <h4>Technology</h4>-->
 <!--                                <p>Vistory is built on the Ionic platform that uses the Angular.js framework to build cross-platform mobile applications. On the backend Vistory uses an Express/Node.js app on Heroku to handle user accounts and authentication, while a remote noSQL database sits on Cloudant for backing up user data</p>-->
