--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
 
 								<div class="row text-center">
 									<div class="col-xs-12">
-										<img src="img/techlogos/swift.png" class="techlogo" width="100">
-										<img src="img/techlogos/arkit.png" class="techlogo" width="100">
+										<img src="img/techlogos/swift.png" class="techlogo" width="100" style="margin:20px;">
+										<img src="img/techlogos/arkit.png" class="techlogo" width="100" style="margin:20px;">
                                             <img src="img/techlogos/cocoapods.png" class="techlogo" width="100">
 									</div>
 								</div>
@@ -164,7 +164,7 @@
                                         </div>
                                 </div>
                                 <div class="row text-center" style="margin:20px;">
-                                        <a class="btn btn-launch" href="https://github.com/eduzatoni/vinilicious" target="blank">On GitHub</a>
+                                        <a class="btn btn-launch" href="https://github.com/eduzatoni/vinilicious" target="blank">GitHub Repository</a>
                                 </div>
                         </div>
                 </div>
