--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
 <!--                                <p>Delivery Pal is build with Ionic, Angular, and Firebase for real-time location tracking. Integrating with the Google Maps API for address lookup and navigation. A Node.js server hosted on Heroku acts as a middel-man, handling backend logic and database updates within Firebase</p>-->
                                 <div class="row text-center">
                                     <div class="col-xs-12">
-                                        <img src="img/techlogos/swift.png" class="techlogo" width="100">
-                                        <img src="img/techlogos/spritekit.png" class="techlogo" width="100">
-                                        <img src="img/techlogos/avfoundation.png" class="techlogo" width="100">
-                                        <img src="img/techlogos/coredata.png" class="techlogo" width="100">
+                                        <img src="img/techlogos/swift.png" class="techlogo" width="100" style="margin:10px;">
+                                        <img src="img/techlogos/spritekit.png" class="techlogo" width="100" style="margin:10px;">
+                                        <img src="img/techlogos/avfoundation.png" class="techlogo" width="100" style="margin:10px;">
+                                        <img src="img/techlogos/coredata.png" class="techlogo" width="100" style="margin:10px;">
                                     </div>
                                 </div>
                                 <div class="row text-center" style="margin:20px;">
@@ -139,9 +139,9 @@
 
 								<div class="row text-center">
 									<div class="col-xs-12">
-										<img src="img/techlogos/swift.png" class="techlogo" width="100" style="margin:20px;">
-										<img src="img/techlogos/arkit.png" class="techlogo" width="100" style="margin:20px;">
-                                            <img src="img/techlogos/cocoapods.png" class="techlogo" width="100">
+										<img src="img/techlogos/swift.png" class="techlogo" width="100" style="margin:10px;">
+										<img src="img/techlogos/arkit.png" class="techlogo" width="100" style="margin:10px;">
+                                            <img src="img/techlogos/cocoapods.png" class="techlogo" width="100" style="margin:10px;">
 									</div>
 								</div>
 								<div class="row text-center" style="margin:20px;">
@@ -160,7 +160,7 @@
 <!--                                <p>Vistory is built on the Ionic platform that uses the Angular.js framework to build cross-platform mobile applications. On the backend Vistory uses an Express/Node.js app on Heroku to handle user accounts and authentication, while a remote noSQL database sits on Cloudant for backing up user data</p>-->
                                 <div class="row text-center">
                                         <div class="col-xs-12">
-                                                <img src="img/techlogos/swift.png" class="techlogo" width="100">
+                                                <img src="img/techlogos/swift.png" class="techlogo" width="100" style="margin:10px;">
                                         </div>
                                 </div>
                                 <div class="row text-center" style="margin:20px;">
