--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
 <!--                                <h4>Technology</h4>-->
 <!--                                <p>Vistory is built on the Ionic platform that uses the Angular.js framework to build cross-platform mobile applications. On the backend Vistory uses an Express/Node.js app on Heroku to handle user accounts and authentication, while a remote noSQL database sits on Cloudant for backing up user data</p>-->
                                 <div class="row text-center">
-                                        <div class="col-xs-12">
-                                                <img src="img/techlogos/swift.png" class="techlogo" width="100" style="margin:10px;">
-                                        </div>
+                                    <div class="col-xs-12">
+                                        <img src="img/techlogos/swift.png" class="techlogo" width="100" style="margin:10px;">
+                                    </div>
                                 </div>
                                 <div class="row text-center" style="margin:20px;">
                                         <a class="btn btn-launch" href="https://github.com/eduzatoni/vinilicious" target="blank">GitHub Repository</a>
@@ -170,24 +170,24 @@
                 </div>
 
 
-<!--                <div class="row work-item-row">-->
-<!--                        <div class="col-sm-8 col-sm-offset-2 project">-->
-<!--                                <img src="img/techlogos/slack.png" class="img-responsive" width="300" style="margin: auto; margin-top:50px">-->
-<!--                                <h2 class="text-center"><a href="https://github.com/Chippd/slackDomainChecker" target="blank">Slack Chat Bot</a></h2>-->
-<!--                                <p>A Slack chat bot built to quickly check domain name availability across the most popular TLD's. </p>-->
-<!--                                <h4>Technology</h4>-->
-<!--                                <p>The Slack bot interacts with a Node.js app living on Heroku, which requests information from a free domain-checking api, parses the response, and delivers a colour-coded response back to the client.</p>-->
-<!--                                <div class="row text-center">-->
-<!--                                        <div class="col-xs-12">-->
-<!--                                                <img src="img/techlogos/node.png" class="techlogo" width="100">-->
-<!--                                                <img src="img/techlogos/heroku.png" class="techlogo" width="100">-->
-<!--                                        </div>-->
-<!--                                </div>-->
-<!--                                <div class="row text-center" style="margin:20px;">-->
-<!--                                        <a class="btn btn-launch" href="https://github.com/Chippd/slackDomainChecker" target="blank">View on Github</a>-->
-<!--                                </div>-->
-<!--                        </div>-->
-<!--                </div>-->
+                <div class="row work-item-row">
+                        <div class="col-sm-8 col-sm-offset-2 project">
+                                <img src="img/techlogos/slack.png" class="img-responsive" width="300" style="margin: auto; margin-top:50px">
+                                <h2 class="text-center"><a href="https://github.com/eduzatoni/tablerules" target="blank">Table Rules</a></h2>
+                                <p>Playground book about the basic rules we should follow on our special meals.</p>
+                                <div class="row text-center">
+                                    <div class="col-xs-12">
+                                        <img src="img/techlogos/swift.png" class="techlogo" width="100" style="margin:10px;">
+                                        <img src="img/techlogos/arkit.png" class="techlogo" width="100" style="margin:10px;">
+                                        <img src="img/techlogos/scenekit.png" class="techlogo" width="100" style="margin:10px;">
+                                        <img src="img/techlogos/avfoundation.png" class="techlogo" width="100" style="margin:10px;">
+                                    </div>
+                                </div>
+                                <div class="row text-center" style="margin:20px;">
+                                        <a class="btn btn-launch" href="https://github.com/eduzatoni/tablerules" target="blank">GitHub Repository</a>
+                                </div>
+                        </div>
+                </div>
 
 
 
