--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
                 <div class="row work-item-row">
                         <div class="col-sm-8 col-sm-offset-2 project">
-                                <img src="img/techlogos/slack.png" class="img-responsive" width="300" style="margin: auto; margin-top:50px">
+                                <img src="" class="img-responsive" width="300" style="margin: auto; margin-top:50px">
                                 <h2 class="text-center"><a href="https://github.com/eduzatoni/tablerules" target="blank">Table Rules</a></h2>
                                 <p>Playground book about the basic rules we should follow on our special meals.</p>
                                 <div class="row text-center">
