--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
 					<div class="row work-item-row">
 						<div class="col-sm-8 col-sm-offset-2 project">
-								<img src="img/vistoryscreen1.png" class="img-responsive">
+								<img src="img/projects/vinilicious/image.png" class="img-responsive">
 								<h2 class="text-center"><a href="https://github.com/eduzatoni/vinilicious" target="blank">Vinilicious</a></h2>
 								<p>A game to know more about Vinicius, friend from Apple Developer Academy, guessing ingredients from his recipes.</p>
 <!--                                <h4>Technology</h4>-->
