--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>Chris Dermody's GitHub Projects</title>
+		<title>Eduardo Zatoni's GitHub Projects</title>
 
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 
@@ -39,11 +39,11 @@
 	</head>
 	<body>
 
-		<nav class="navbar navbar-default navbar-fixed-top animated slideInDown">
-		  <div class="container-fluid">
-		    	<p class="navbar-text navbar-right"><a href="http://chrisdermody.com/web-developer-portfolios-5-single-page-websites-to-land-you-your-next-development-job/?utm_source=github_portfolio&utm_medium=eng_mark&utm_campaign=free_webdev_templates" target="_blank" class="navbar-link">This portfolio template got me a job! I'm giving the code away for free here</a></p>
-		  </div>
-		</nav>
+<!--        <nav class="navbar navbar-default navbar-fixed-top animated slideInDown">-->
+<!--          <div class="container-fluid">-->
+<!--                <p class="navbar-text navbar-right"><a href="http://chrisdermody.com/web-developer-portfolios-5-single-page-websites-to-land-you-your-next-development-job/?utm_source=github_portfolio&utm_medium=eng_mark&utm_campaign=free_webdev_templates" target="_blank" class="navbar-link">This portfolio template got me a job! I'm giving the code away for free here</a></p>-->
+<!--          </div>-->
+<!--        </nav>-->
 
 
 
@@ -51,14 +51,12 @@
 
 			<div class="text-center">
 				<img src="img/profiler-round2.png" width=200 class="profile-pic">
-				<h1>Chris Dermody</h1>
-			  <h3>Product Builder</h3>
-			  <h5>Web Developer</h5>
+				<h1>Eduardo Zatoni Curupana</h1>
+			  <h3>iOS Developer</h3>
+<!--              <h5>Web Developer</h5>-->
 
 			  <div class="text-center" style="margin:20px">
-			  	<a href="http://chrisdermody.com/" class="" target="_blank">
-			  		chrisdermody.com
-			  	</a>
+			  	<a href="mailto:eduzatoni@outloook.com" class="email"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>eduzatoni@outloook.com</a>
 			  </div>
 			</div>
 
