--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
 
 			  <div class="text-center" style="margin:20px">
 			  	<a href="mailto:eduzatoni@outloook.com" class="email"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>eduzatoni@outloook.com</a>
+                <a href="https://www.linkedin.com/in/eduardozatoni/?locale=en_US" class="" target="_blank">
+                    My LinkedIn Profile
+                </a>
+                <a href="https://www.linkedin.com/in/eduardozatoni/?locale=en_US"><img src="img/linkedin.png" width="200" height="65" title="LinkedIn" alt="linkedin"></a>
 			  </div>
 			</div>
 
@@ -147,7 +151,7 @@
 			    		</div>
 			    		<div class="col-lg-4 col-lg-pull-8">
                             <h2 class="text-center"><a href="https://github.com/eduzatoni/tablerules" target="blank">Table Rules</a></h2>
-                            <p>Playground book about the basic rules we should follow on our special meals.</p>
+                            <p>Playground Book about the basic rules we should follow on our special meals. Learn cutlery rules with augmented reality.</p>
 			    		</div>
 			    	</div>
 		    		<div class="row text-center">
