--- a/index.html
+++ b/index.html
@@ -190,16 +190,16 @@
 <!--                    </div>-->
 <!--            </div>-->
 
-<!--            <div class="row row-tools row-white">-->
-<!--                <div class="col-sm-12 text-center">-->
-<!---->
-<!--                    <h3>Tools I Use</h3>-->
-<!--                    <img src="img/tool-logos/sketch.png" class="techlogo" width="150">-->
-<!--                    <img src="img/tool-logos/git.png" class="techlogo" width="150">-->
-<!--                    <img src="img/tool-logos/sublime.png" class="techlogo" width="150">-->
-<!---->
-<!--                    </div>-->
-<!--            </div>-->
+            <div class="row row-tools row-white">
+                <div class="col-sm-12 text-center">
+
+                    <h3>Tools I Use</h3>
+                    <img src="img/tool-logos/xcode.png" class="techlogo" width="150">
+                    <img src="img/tool-logos/sketch.png" class="techlogo" width="150">
+                    <img src="img/tool-logos/git.png" class="techlogo" width="150">
+
+                    </div>
+            </div>
 
 			<div class="row row-footer text-center">
 				<div class="col">
