--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 		    			</div>
 		    		</div>
 		    		<div class="row text-center" style="margin:20px;">
-                        <a href="https://apps.apple.com/app/jobcatcher/id1451967259"><img src="img/app_store_black.png" width="200" height="65" title="App Store" alt="appstore"></a>
+                        <a href="https://apps.apple.com/app/jobcatcher/id1451967259"><img src="img/appstore.png" width="200" height="65" title="App Store" alt="appstore"></a>
 	    			</div>
                 </div>
 			</div>
