--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 			    <div class="col-sm-8 col-sm-offset-2">
 			    	<div class="row work-item-row">
 			    		<div class="col-lg-8 col-lg-push-4">
-			    			<img src="" class="img-responsive center-block">
+			    			<img src="img/projects/tablerules/image.png" class="img-responsive center-block">
 			    		</div>
 			    		<div class="col-lg-4 col-lg-pull-8">
                             <h2 class="text-center"><a href="https://github.com/eduzatoni/tablerules" target="blank">Table Rules</a></h2>
@@ -160,7 +160,7 @@
 		    			</div>
 		    		</div>
 		    		<div class="row text-center" style="margin:20px;">
-		    			<a class="btn btn-launch" href="https://github.com/Chippd/slackDomainChecker" target="blank">View on Github</a>
+		    			<a class="btn btn-launch" href="https://github.com/Chippd/slackDomainChecker" target="blank">GitHub Repository</a>
 	    			</div>
 					</div>
 			</div>
