--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 		    			</div>
 		    		</div>
 		    		<div class="row text-center" style="margin:20px;">
-		    				<a href="https://apps.apple.com/app/rhitme/id1465720365"><img src="img/appstorewhite.png" width="200" height="65" title="App Store" alt="appstore"></a>
+		    				<a href="https://apps.apple.com/app/rhitme/id1465720365" target="blank"><img src="img/appstorewhite.png" width="200" height="65" title="App Store" alt="appstore"></a>
 	    			</div>
                 </div>
 			</div>
@@ -109,7 +109,7 @@
 		    			</div>
 		    		</div>
 		    		<div class="row text-center" style="margin:20px;">
-                        <a href="https://apps.apple.com/app/jobcatcher/id1451967259"><img src="img/appstorewhite.png" width="200" height="65" title="App Store" alt="appstore"></a>
+                        <a href="https://apps.apple.com/app/jobcatcher/id1451967259" target="blank"><img src="img/appstorewhite.png" width="200" height="65" title="App Store" alt="appstore"></a>
 	    			</div>
                 </div>
 			</div>
