--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 			  <div class="text-center" style="margin:20px">
 			  	<a href="mailto:eduzatoni@outloook.com" class="email"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>eduzatoni@outloook.com</a></br></p>
-                <a href="https://www.linkedin.com/in/eduardozatoni/?locale=en_US"><img src="img/linkedin.png" width="50" height="50" title="LinkedIn" alt="linkedin"></a>
+                <a href="https://www.linkedin.com/in/eduardozatoni/?locale=en_US" target="blank"><img src="img/linkedin.png" width="50" height="50" title="LinkedIn" alt="linkedin"></a>
 			  </div>
 			</div>
 
