--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 		<script>
 			var iOS = /iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream;
 			if (iOS) {
-				window.location = 'https://google.com';
+				window.location = 'https://itunes.apple.com/de/app/heyobi/id1331431911?mt=8';
 			}
 		</script>
 
