--- a/index.html
+++ b/index.html
@@ -11,6 +11,22 @@
 
 		  gtag('config', 'G-N8QXLGJP6T');
 		</script>
+
+		<script type="text/javascript" src="https://assets.emarsys.net/web-emarsys-sdk/2.2.0/web-emarsys-sdk.js" async></script>
+		<script type="text/javascript">
+		var WebEmarsysSdk = WebEmarsysSdk || []
+			WebEmarsysSdk.push(['init', {
+				applicationCode: 'EMS9E-F995A', // your Domain code obtained above
+				safariWebsitePushID: 'web.com.yoursite.example', //  unique reverse-domain string, obtained in you Apple Developer Portal
+				defaultNotificationTitle: 'Your Default Title', // sets your default title for push notifications
+				defaultNotificationIcon: 'https://yoursite.com/img/your-logo.png', // URL to your notification icon
+				autoSubscribe: true, // If true, prompts a user to subscribe for pushes upon SDK initialization which is not recommended
+				serviceWorker: {
+				url: 'service-worker.js',
+				applicationServerPublicKey: 'BBR9_y7sJXX29nouTmykOXgJIXADeWnERTbJ7WiwZkfrz2QCohrk_BtKVp09rcZIxZgnHN0D5GVcQFf04SGEPx4'
+				}
+			}])
+		</script>
 		
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
