--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="Service-Worker-Allowed" content="/">
 
 		<title>Eduardo Zatoni's GitHub Projects</title>
 
