--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 					safariWebsitePushID: 'web.com.yoursite.example', //  unique reverse-domain string, obtained in you Apple Developer Portal
 					defaultNotificationTitle: 'Your Default Title', // sets your default title for push notifications
 					defaultNotificationIcon: 'https://yoursite.com/img/your-logo.png', // URL to your notification icon
-					autoSubscribe: true, // If true, prompts a user to subscribe for pushes upon SDK initialization which is not recommended
+					autoSubscribe: false, // If true, prompts a user to subscribe for pushes upon SDK initialization which is not recommended
 					serviceWorker: {
 						url: '/assets/service-worker.js',
 						applicationServerPublicKey: 'BBR9_y7sJXX29nouTmykOXgJIXADeWnERTbJ7WiwZkfrz2QCohrk_BtKVp09rcZIxZgnHN0D5GVcQFf04SGEPx4'
