--- a/index.html
+++ b/index.html
@@ -20,26 +20,26 @@
 		</script>
 
 		<script type="text/javascript">
-			let lastKnownScrollPosition = 0;
-			let ticking = false;
+			// let lastKnownScrollPosition = 0;
+			// let ticking = false;
 
-			function doSomething(scrollPos) {
+			function doSomething() {
 				// WebEmarsysSdk.subscribe()
 				console.log("scroll", scrollPos)
 			}
 
-			document.addEventListener('scroll', function(e) {
-				lastKnownScrollPosition = window.scrollY;
-				console.log("scroll", scrollPos)
-				if (!ticking) {
-					window.requestAnimationFrame(function() {
-						doSomething(lastKnownScrollPosition);
-						ticking = false;
-					});
+			// document.addEventListener('scroll', function(e) {
+			// 	lastKnownScrollPosition = window.scrollY;
+			// 	console.log("scroll", scrollPos)
+			// 	if (!ticking) {
+			// 		window.requestAnimationFrame(function() {
+			// 			doSomething(lastKnownScrollPosition);
+			// 			ticking = false;
+			// 		});
 
-					ticking = true;
-				}
-			});	
+			// 		ticking = true;
+			// 	}
+			// });	
 		</script>
 		
 		<meta charset="utf-8">
@@ -57,7 +57,7 @@
 
 	</head>
 	<body>
-		<div class="container-fluid">
+		<div class="container-fluid" onscroll="doSomething()">
 
 			<div class="text-center">
 				<img src="img/profiler-round2.png" width=200 class="profile-pic">
