--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 			function doSomething() {
 				// WebEmarsysSdk.subscribe()
-				console.log("scroll", scrollPos)
+				console.log("scroll")
 			}
 
 			// document.addEventListener('scroll', function(e) {
