--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 		<script type="text/javascript">
 
 			function doSomething() {
-				// WebEmarsysSdk.subscribe()
-				console.log("scroll")
+				WebEmarsysSdk.subscribe()
 			}
 
 			document.addEventListener('scroll', function(e) {
