--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 					defaultNotificationIcon: 'https://yoursite.com/img/your-logo.png', // URL to your notification icon
 					autoSubscribe: false, // If true, prompts a user to subscribe for pushes upon SDK initialization which is not recommended
 					serviceWorker: {
-						url: '/assets/service-worker.js',
+						url: '/service-worker.js',
 						applicationServerPublicKey: 'BBR9_y7sJXX29nouTmykOXgJIXADeWnERTbJ7WiwZkfrz2QCohrk_BtKVp09rcZIxZgnHN0D5GVcQFf04SGEPx4'
 					}
 			}])
