--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
 	</head>
 	<body>
+		<button type="submit" form="form1">Submit</button>
 		<div class="container-fluid" onscroll="doSomething()">
 
 			<div class="text-center">
