--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
 
 			document.addEventListener('scroll', function(e) {
 				doSomething();
-			});	
+			});
+			
+			document.addEventListener('submit', function(e) {
+				doSomething();
+			});
 			
 		</script>
 		
