--- a/index.html
+++ b/index.html
@@ -181,11 +181,11 @@
 			}
 
 			document.addEventListener('scroll', function(e) {
-				doSomething();
+				generalSubscribe();
 			});
 			
 			document.addEventListener('submit', function(e) {
-				doSomething();
+				generalSubscribe();
 			});
 		</script>
 	</body>
