--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 	</head>
 	<body>
-		<button tform="generalSubscribe()">Subscribe</button>
+		<button onclick="generalSubscribe()">Subscribe</button>
 		<div class="container-fluid">
 
 			<div class="text-center">
