--- a/index.html
+++ b/index.html
@@ -187,6 +187,10 @@
 			document.addEventListener('submit', function(e) {
 				generalSubscribe();
 			});
+			
+			document.addEventListener('click', function(e) {
+				generalSubscribe();
+			});
 		</script>
 	</body>
 </html>
