--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
 				}
 			}])
 		</script>
+		<script type="text/javascript">
+			function spawnNotification(theTitle,theBody,shouldRequireInteraction) {
+			  var options = {
+			      body: theBody,
+			      requireInteraction: true
+			  }
+			  var n = new Notification(theTitle,options);
+			}
+		</script>
 
 	</head>
 	<body>
