--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
 				}
 			}])
 		</script>
+		
+		<script type="text/javascript">
+			WebEmarsysSdk.login({
+			  fieldId: 3,
+			  fieldValue: "eduardo.zatoni@emarsys.com"
+			})
+		</script>
 	</head>
 	<body>
 <button onclick="generalSubscribe()">Subscribe</button>
