--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			function login() {
 				WebEmarsysSdk.login({
 					fieldId: 3,
-					fieldValue: sc_customer
+					fieldValue: 'eduardo.zatoni@emarsys.com'
 				})
 			}
 
