--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
 					fieldId: 3,
 					fieldValue: 'eduardo.zatoni@emarsys.com'
 				})
+				console.log('Logged in!')
 			}
 
 			function generalSubscribe() {
 				return WebEmarsysSdk.subscribe()
+				console.log('Subscribed!')
 			}
 			// The scroll event fires when the document view has been scrolled
 			document.addEventListener('scroll', function(e) {
