--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
 				return WebEmarsysSdk.subscribe()
 				
 			}
-			// The scroll event fires when the document view has been scrolled
-			document.addEventListener('scroll', function(e) {
-				generalSubscribe();
-			});
-			// The submit event fires when a <form> is submitted.
-			document.addEventListener('submit', function(e) {
-				generalSubscribe();
-			});
-			// An element receives a click event when a pointing device button (such as a mouse's primary mouse button) is both pressed and released while the pointer is located inside the element.
-			document.addEventListener('click', function(e) {
-				generalSubscribe();
-			});
+// 			// The scroll event fires when the document view has been scrolled
+// 			document.addEventListener('scroll', function(e) {
+// 				generalSubscribe();
+// 			});
+// 			// The submit event fires when a <form> is submitted.
+// 			document.addEventListener('submit', function(e) {
+// 				generalSubscribe();
+// 			});
+// 			// An element receives a click event when a pointing device button (such as a mouse's primary mouse button) is both pressed and released while the pointer is located inside the element.
+// 			document.addEventListener('click', function(e) {
+// 				generalSubscribe();
+// 			});
 		</script>
 	</body>
 </html>
